examples/test/testpolicy19281.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19281
  namespace: namespace381
spec:
  podSelector:
    matchLabels:
      key29: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value18
          key2: value36
          key48: value17
      podSelector:
        matchLabels:
          key9: value38
          key23: value14
